--- a/my-app/package.json
+++ b/my-app/package.json
@@ -21,10 +21,10 @@
 		"web-vitals": "^2.1.3"
 	},
 	"scripts": {
-		"start": "cd my-app && react-scripts start",
-		"build": " cd my-app && react-scripts build",
-		"test": " cd my-app && react-scripts test",
-		"eject": " cd my-app && react-scripts eject"
+		"start": "react-scripts start",
+		"build": " react-scripts build",
+		"test": " react-scripts test",
+		"eject": " react-scripts eject"
 	},
 	"eslintConfig": {
 		"extends": [
